--- a/src/interfaz/Usuarios.form
+++ b/src/interfaz/Usuarios.form
@@ -91,7 +91,7 @@
                       <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="jLabelTitulo" pref="238" max="32767" attributes="0"/>
+                              <Component id="jLabelTitulo" pref="246" max="32767" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jLabelUsuario" min="-2" max="-2" attributes="0"/>
@@ -494,6 +494,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableUsuariosMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
