--- a/src/interfaz/InicioSoporte.form
+++ b/src/interfaz/InicioSoporte.form
@@ -301,7 +301,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&#xa9;2015 Polit&#xe9;cnico Colombiano Jaime Isaza Cadavid"/>
+            <Property name="text" type="java.lang.String" value="&#xa9;2015 Sebastian Pernett, Daniel Gallego y Andres Serna."/>
           </Properties>
         </Component>
         <Container class="javax.swing.JPanel" name="So">
